@@ -9,6 +9,8 @@ Version 1.0 to be released
 - Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
 - Added CHtml::openTag and CHtml::closeTag (Qiang)
 - Added CTabView (Qiang)
+- Added CActiveRecord::safeAttributes (Qiang)
+- Added CHtml::activeFileField (Qiang)
 
 Version 1.0rc November 10, 2008
 -------------------------------
